fix: fix alignments on fourth column

--- a/style.css
+++ b/style.css
@@ -149,7 +149,8 @@ button{
 
 /* Fourth box of the page */
 .fourth-column{
-    margin: 48px;
+    margin: 48px auto;
+    width: 50%;
     padding: 48px;
     background-color: #3882F6;
     border-radius: 5px;
@@ -158,7 +159,6 @@ button{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 700px;
 }
 
 .action{
